added 4 new bibliography entries

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -324,3 +324,52 @@
 	publisher = {IEEE Computer Society Press},
 	address = {Los Alamitos, CA, USA},
 } 
+
+@article{JIHA10,
+	title={An analysis and survey of the development of mutation testing},
+	author={Yue Jia and Mark Harman},
+	journal={IEEE Transactions on Software Engineering},
+	number={99},  
+	year={2010},
+	publisher={IEEE}
+}
+
+@inproceedings{HANE10,
+	title = {Faith, hope, and love: an essay on software science's neglect of human factors},
+	author = {Stefan Hanenberg},
+	year = {2010},
+	doi = {http://doi.acm.org/10.1145/1869459.1869536},
+	tags = {programming languages, empirical, human factors, state machines, programming, type soundness, e-science},
+	cites = {0},
+	citedby = {0},
+	booktitle = {OOPSLA '10: Proceedings of the ACM international conference on Object oriented programming systems languages and applications},
+	address = {New York, NY, USA},
+	publisher = {ACM},
+	isbn = {978-1-4503-0203-6},
+}
+
+@inproceedings{STHA11,
+	author = {Andreas Stuchlik and Stefan Hanenberg},
+	title = {Static vs. dynamic type systems: an empirical study about the relationship between type casts and development time},
+	booktitle = {Proceedings of the 7th symposium on Dynamic languages},
+	series = {DLS '11},
+	year = {2011},
+	isbn = {978-1-4503-0939-4},
+	location = {Portland, Oregon, USA},
+	pages = {97--106},
+	numpages = {10},
+	doi = {10.1145/2047849.2047861},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+}
+
+@inproceedings{KHRT12,
+	author    = {Sebastian Kleinschmager and Stefan Hanenberg and Romain Robbes and {\'E}ric Tanter and Andreas Stefik},
+	title     = {Do static type systems improve the maintainability of software systems? An empirical study},
+	booktitle = {Proceedings of the International Conference on Program Comprehension},
+	year      = {2012},
+	pages     = {153-162},
+	doi       = {10.1109/ICPC.2012.6240483},
+	location  = {Passau, Germany}
+}
+
