--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -517,6 +517,10 @@ dangerously loose syntax.
 \section{Related Work} % {{{1
 \label{sec:related}
 
+% Add these
+
+\cite{JIHA10}, \cite{HANE10}, \cite{STHA11}, \cite{KHRT12}
+
 Comparative language evaluation has a long and sometimes colorful history.
 See for instance,
 the comparison of {\sc pl/i} with Cobol, {\sc fortran} and Jovial in
