added one more publication to related work

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -519,7 +519,7 @@ dangerously loose syntax.
 
 % Add these
 
-\cite{JIHA10}, \cite{HANE10}, \cite{STHA11}, \cite{KHRT12}
+\cite{JIHA10}, \cite{HANE10}, \cite{STHA11}, \cite{KHRT12}, \cite{LFGC07}
 
 Comparative language evaluation has a long and sometimes colorful history.
 See for instance,
