--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -373,3 +373,21 @@
 	location  = {Passau, Germany}
 }
 
+@inproceedings{LFGC07,
+	author = {Benjamin S. Lerner and Matthew Flower and Dan Grossman and Craig Chambers},
+	title = {Searching for type-error messages},
+	booktitle = {Proceedings of the 2007 ACM SIGPLAN conference on Programming language design and implementation},
+	series = {PLDI '07},
+	year = {2007},
+	isbn = {978-1-59593-633-2},
+	location = {San Diego, California, USA},
+	pages = {425--434},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/1250734.1250783},
+	doi = {10.1145/1250734.1250783},
+	acmid = {1250783},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {error messages, objective Caml, seminal, type-checking, type-inference},
+} 
+
