--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -214,9 +214,9 @@ The tasks we studied are listed in Table~\ref{tab:tasks}.
 \hline
 AccumFactory & 17 & 57 & 8 & 16 & 16 & 8 & 7 & 7 & 10 & 30 & 10 \\
 Hello & 7 & 8 & 7 & 1 & 6 & 1 & 1 & 1 & 7 & 1 & 10 \\
-FlatList & 118 & \ding{55} & \ding{55} & 15 & \ding{55} & 4 & 15 & 5 & 14 & 1 & 7 \\
+FlatList & 118 & \ding{55} & 39 & 15 & 35 & 4 & 15 & 5 & 14 & 1 & 9 \\
 Power & 27 & 77 & \ding{55} & 10 & 31 & 13 & 59 & 3 & 29 & 47 & 9 \\
-ZigZag & 22 & 80 & \ding{55} & 19 & 46 & \ding{55} & 31 & 15 & 13 & 14 & 8 \\
+ZigZag & 22 & 80 & 24 & 19 & 46 & \ding{55} & 31 & 15 & 13 & 14 & 9 \\
 FuncComp & 60 & 34 & 18 & 4 & 32 & 6 & 7 & 9 & 3 & 7 & 10 \\
 Substring & 21 & 21 & 35 & \ding{55} & 10 & 1 & 3 & 9 & 1 & 1 & 9 \\
 ManBoy & 46 & 32 & 22 & 11 & 28 & 8 & 13 & 8 & 11 & 5 & 10 \\
@@ -227,7 +227,7 @@ MutRecursion & 29 & 35 & 31 & 8 & 20 & 18 & 22 & 28 & 4 & 8 & 10 \\
 Dow & 23 & 17 & 17 & 7 & 13 & 5 & 9 & 17 & 7 & 4 & 10 \\
 Mult & 31 & 53 & 61 & 14 & 40 & 25 & 32 & 23 & 41 & 25 & 10 \\
 \hline
-\textbf{Total lines} & 458 & 461 & 258 & 114 & 296 & 102 & 224 & 156 & 161 & 159 & \\
+\textbf{Total lines} & 458 & 461 & 321 & 114 & 331 & 102 & 224 & 156 & 161 & 159 & \\
 \end{tabular}
 \end{center}
 \caption{Lines of Code per Task and per Language, Unimplemented Tasks, and Implemented Languages per Task.}
@@ -457,17 +457,17 @@ associated with scripting language features.
 & \multicolumn{3}{c}{IntPert (\%)} & \multicolumn{3}{c}{IdSub (\%)} & \multicolumn{3}{c}{SimSub (\%)} & \multicolumn{3}{c}{RandCharSub (\%)} & \multicolumn{3}{c}{RandTokenSub (\%)}\\ 
 	       & com  & run  & out  & com  & run  & out  & com  & run  & out  & com & run   & out  & com  & run  & out\\
 \hline													
-C & 100.0 & 52.6 & 34.0 & 16.6 & 14.0 & 3.6  & 20.6 & 16.6 & 7.0  & 7.3 & 7.3 & 1.1  & 5.4 & 5.1 & 1.7 \\
-C++ & 91.7 & 47.2 & 41.0  & 5.6 & 4.9 & 1.0  & 8.3 & 7.1 & 4.0  & 3.7 & 3.7 & 0.3  & 2.6 & 2.4 & 1.1 \\
-C\# & 69.8 & 65.2 & 53.2  & 6.9 & 6.9 & 0.3  & 7.7 & 7.4 & 1.4  & 4.0 & 4.0 & 0.1  & 3.0 & 3.0 & 0.3 \\
-Haskell & 89.4 & 84.0 & 73.7  & 4.0 & 1.9 & 1.5  & 13.4 & 11.2 & 9.1  & 3.7 & 3.4 & 1.1  & 3.5 & 3.2 & 1.5 \\
-Java & 100.0 & 82.5 & 62.1  & 5.1 & 3.6 & 0.7  & 7.9 & 6.4 & 3.3  & 3.1 & 3.0 & 0.1  & 2.3 & 1.9 & 0.1 \\
-Javascript & 100.0 & 79.7 & 73.7  & 65.9 & 18.4 & 12.7  & 57.2 & 22.9 & 17.8  & 30.9 & 9.6 & 1.7  & 15.0 & 5.7 & 3.9 \\
-{\sc php} & 99.2 & 87.5 & 71.3  & 56.4 & 34.1 & 31.0  & 46.2 & 39.7 & 38.3  & 37.4 & 32.7 & 30.9  & 25.7 & 23.7 & 22.6 \\
-Perl & 100.0 & 91.0 & 68.9  & 57.9 & 29.3 & 21.9  & 44.3 & 27.3 & 16.8  & 15.1 & 11.6 & 4.9  & 18.2 & 14.2 & 9.2 \\
-Python & 100.0 & 75.3 & 60.9  & 43.3 & 17.3 & 4.7  & 45.2 & 23.6 & 13.6  & 18.3 & 6.9 & 0.7  & 20.7 & 10.6 & 4.9 \\
-Ruby & 100.0 & 91.1 & 59.5  & 52.3 & 11.8 & 2.7  & 58.0 & 27.0 & 10.9  & 27.6 & 14.7 & 2.4  & 33.4 & 15.8 & 4.8 \\
-\textbf{Mean} & \textbf{95.1} & \textbf{74.5} & \textbf{58.7}  & \textbf{30.6} & \textbf{14.0} & \textbf{7.8}  & \textbf{30.3} & \textbf{18.7} & \textbf{12.1}  & \textbf{15.1} & \textbf{9.7} & \textbf{4.3}  & \textbf{12.8} & \textbf{8.5} & \textbf{5.0} \\
+C & 100.0 & 56.5 & 36.9  & 15.9 & 13.2 & 3.4  & 20.5 & 16.4 & 8.6  & 7.3 & 7.1 & 0.8  & 6.2 & 5.3 & 1.7 \\
+C++ & 92.4 & 48.3 & 41.2  & 5.2 & 4.4 & 1.6  & 8.5 & 6.9 & 4.4  & 4.0 & 4.0 & 0.3  & 2.1 & 1.8 & 0.5 \\
+C\# & 89.9 & 74.1 & 60.8  & 9.1 & 8.8 & 0.5  & 10.6 & 9.6 & 2.4  & 5.5 & 5.5 & 0.2  & 3.4 & 3.3 & 0.2 \\
+Haskell & 89.2 & 83.5 & 72.2  & 5.2 & 3.3 & 2.4  & 13.5 & 11.4 & 9.4  & 2.9 & 2.6 & 0.6  & 3.8 & 3.3 & 2.0 \\
+Java & 100.0 & 84.3 & 63.9  & 5.7 & 3.9 & 0.6  & 7.8 & 5.8 & 3.4  & 2.5 & 2.2 & 0.3  & 1.8 & 1.6 & 0.3 \\
+Javascript & 100.0 & 80.3 & 74.9  & 66.2 & 16.4 & 11.4  & 57.2 & 22.1 & 17.6  & 31.1 & 8.9 & 2.2  & 12.4 & 4.6 & 3.1 \\
+PHP & 98.8 & 89.0 & 73.3  & 52.9 & 34.0 & 31.0  & 45.1 & 37.5 & 35.8  & 39.4 & 33.5 & 31.3  & 23.5 & 22.4 & 20.9 \\
+Perl & 100.0 & 89.3 & 67.8  & 59.1 & 29.0 & 19.5  & 47.0 & 30.1 & 20.0  & 16.9 & 12.2 & 5.4  & 18.9 & 13.7 & 9.3 \\
+Python & 100.0 & 77.7 & 62.2  & 45.0 & 16.8 & 5.4  & 46.9 & 23.2 & 13.7  & 17.7 & 5.4 & 1.0  & 20.6 & 9.8 & 4.6 \\
+Ruby & 100.0 & 91.4 & 59.9  & 55.0 & 13.4 & 3.4  & 56.7 & 27.1 & 12.8  & 29.3 & 15.4 & 3.6  & 36.4 & 21.4 & 11.0 \\
+\textbf{Mean} & \textbf{97.0} & \textbf{76.3} & \textbf{60.1}  & \textbf{31.1} & \textbf{14.1} & \textbf{7.8}  & \textbf{30.8} & \textbf{18.8} & \textbf{12.7}  & \textbf{15.7} & \textbf{9.7} & \textbf{4.6}  & \textbf{12.9} & \textbf{8.7} & \textbf{5.4} \\
 \end{tabular}
 \end{center}
 \caption{Failure modes for each language, fuzz operation, and phase (successful compilations, runs, and wrong output).}
