still updating numbers

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -439,8 +439,8 @@ a problem (a crash or an exception)
 than code written in languages with a strong type system.
 As one would expect these two differences result in a higher rate of
 wrong output from programs written in languages with weak typing.
-With an error rate of 37\% for {\sc php} against one of 8\% for
-C++ and C\#, one would be foolish indeed to write a defibrillator's
+With an error rate of 36\% for {\sc php} against one of 8\% for
+C++ and 10\% for C\#, one would be foolish indeed to write a defibrillator's
 software in {\sc php}.
 
 Overall, the figures for dynamic scripting languages show a far larger
