added Panos Louridas in author list

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -28,9 +28,9 @@
 \title{Comparative Language Fuzz Testing}
 \subtitle{Programming Languages vs. Fat Fingers}
 
-\authorinfo{Diomidis Spinellis\and Vassilios Karakoidas}
+\authorinfo{Diomidis Spinellis\and Vassilios Karakoidas\and Panos Louridas}
   {Athens University of Economics and Business}
-  {\{dds, bkarak\}@aueb.gr}
+  {\{dds, bkarak, louridas\}@aueb.gr}
 
 \maketitle
 
