contigency tables are now grouped in one page

--- a/pub/contingency_table_results.tex
+++ b/pub/contingency_table_results.tex
@@ -1,5 +1,6 @@
 
 \begin{table*}
+\subtable[C]{
 \centering
 \begin{tabular}{l c}
 & C \\
@@ -18,17 +19,11 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\blacklozenge|\lozenge\blacklo
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for c}
-\label{tbl:contingency-test-results-c}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[C++]{
 \begin{tabular}{l c}
 & C++ \\
 \hline
-
 C & $\scriptscriptstyle\blacklozenge\lozenge\blacklozenge\lozenge|\lozenge\lozenge\lozenge\lozenge|\blacklozenge\lozenge\blacklozenge\blacklozenge|\blacklozenge\lozenge\blacklozenge\blacklozenge|\blacklozenge\lozenge\blacklozenge\lozenge$ \\
 C\# & $\scriptscriptstyle\blacklozenge\lozenge\lozenge\lozenge|\lozenge\lozenge\lozenge\lozenge|\blacklozenge\lozenge\blacklozenge\blacklozenge|\blacklozenge\lozenge\lozenge\lozenge|\blacklozenge\lozenge\lozenge\lozenge$ \\
 Haskell & $\scriptscriptstyle\lozenge\blacklozenge\lozenge\lozenge|\lozenge\lozenge\lozenge\blacklozenge|\blacklozenge\lozenge\lozenge\lozenge|\lozenge\lozenge\blacklozenge\lozenge|\lozenge\lozenge\blacklozenge\lozenge$ \\
@@ -42,13 +37,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\lozenge\lozenge\loze
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for cpp}
-\label{tbl:contingency-test-results-cpp}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[C\#]{
 \begin{tabular}{l c}
 & C\# \\
 \hline
@@ -66,13 +56,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\lozenge\lozenge\loze
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for cs}
-\label{tbl:contingency-test-results-cs}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Haskell]{
 \begin{tabular}{l c}
 & Haskell \\
 \hline
@@ -90,13 +75,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\blacklozenge\lozenge
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for hs}
-\label{tbl:contingency-test-results-hs}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Java]{
 \begin{tabular}{l c}
 & Java \\
 \hline
@@ -114,13 +94,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\lozenge\blacklozenge
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for java}
-\label{tbl:contingency-test-results-java}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Javascript]{
 \begin{tabular}{l c}
 & Javascript \\
 \hline
@@ -138,13 +113,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\blacklozenge\lozenge|\lozenge\blacklo
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for js}
-\label{tbl:contingency-test-results-js}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[PHP]{
 \begin{tabular}{l c}
 & {\sc php} \\
 \hline
@@ -162,13 +132,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\lozenge\lozenge\loze
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for php}
-\label{tbl:contingency-test-results-php}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Perl]{
 \begin{tabular}{l c}
 & Perl \\
 \hline
@@ -186,13 +151,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\lozenge\blacklozenge
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for pl}
-\label{tbl:contingency-test-results-pl}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Python]{
 \begin{tabular}{l c}
 & Python \\
 \hline
@@ -210,13 +170,8 @@ Ruby & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\blacklozenge\blacklo
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for py}
-\label{tbl:contingency-test-results-py}
-\end{table*}
-
-
-\begin{table*}
-\centering
+}
+\subtable[Ruby]{
 \begin{tabular}{l c}
 & Ruby \\
 \hline
@@ -234,7 +189,8 @@ Python & $\scriptscriptstyle\lozenge\lozenge\lozenge\lozenge|\blacklozenge\black
 \hline
 & \\
 \end{tabular}
-\caption{Contingency test results for rb}
-\label{tbl:contingency-test-results-rb}
+}
+\caption{Contingency test results}
+\label{tbl:contingency-test-results}
 \end{table*}
 
