--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -519,6 +519,7 @@ analysis for all pairs of languages and each fuzz test. We used the
 Fisher exact test, instead of the more common chi square test, since
 there were cases with very low frequencies. 
 
+%% @dds
 The results are presented in Tables \ref{tbl:contingency-test-results}. 
 Black lozenges appear when a
 particular fuzz test \emph{failed} to show a statistically significant
@@ -551,6 +552,7 @@ differently among languages, since all the tests passed.
 \end{itemize}
 
 \input{contingency_table_results.tex}
+%% @dds
 
 \section{Related Work} % {{{1
 \label{sec:related}
