added code/paper availability url

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -711,7 +711,7 @@ the implemented tasks,
 the fuzzer,
 the language-specific methods, and
 the driver are maintained on GitHub, and
-are publicly available as open source software on \url{http://XXX}.
+are publicly available as open source software on \url{https://github.com/bkarak/fuzzer-plateau-2012}.
 
 % XXX STEREO
 
