Changes following reviewer comments

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -391,3 +391,45 @@
 	keywords = {error messages, objective Caml, seminal, type-checking, type-inference},
 } 
 
+@article{OW84,
+	author = "Thomas J. Ostrand and Elaine J. Weyuker",
+	title = "Collecting and Categorizing Software Error Data in an Industrial Environment",
+	journal = "Journal of Systems and Software",
+	volume = "4",
+	number = "4",
+	pages = "289-300",
+	year = "1984",
+	note = "",
+	issn = "0164-1212",
+	doi = "10.1016/0164-1212(84)90028-1",
+	Where="pub/lib"
+}
+
+@Article{KNUTH89,
+	Author="Donald E. Knuth",
+	Title="The Errors of {TeX}",
+	journal = {Software: Practice and Experience},
+	Year="1989",
+	Volume="19",
+	Number="7",
+	Pages="607--687",
+	Month=jul
+	}
+
+@article{End75,
+	author = {Endres, Albert},
+	title = {An Analysis of Errors and their Causes in System Programs},
+	journal = {SIGPLAN Notices},
+	volume = {10},
+	number = {6},
+	month = apr,
+	year = {1975},
+	issn = {0362-1340},
+	pages = {327--336},
+	numpages = {10},
+	Note = {Proceedings of the International Conference on Reliable Software},
+	doi = {10.1145/390016.808455},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	Where="pub/lib"
+} 
