Add reviewer ack

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -732,11 +732,12 @@ test coverage analysis.
 
 \acks
 
-We would like to thank Florents Tselai and Konstantinos Stroggylos 
+We would like to thank Florents Tselai and Konstantinos Stroggylos
 for significant help in the porting and implementation of the
 {\em Rosetta Code} tasks in our environment,
-and the numerous contributors of {\em Rosetta Code} for
-making their efforts available to the public.
+the numerous contributors of {\em Rosetta Code} for
+making their efforts available to the public,
+and the paper's reviewers for their many insightful comments.
 
 This research has been co-financed by
 the European Union (European Social Fund --- {\sc esf})
@@ -754,8 +755,6 @@ the fuzzer,
 the language-specific methods, and
 the driver are maintained on GitHub, and
 are publicly available as open source software on \url{https://github.com/bkarak/fuzzer-plateau-2012}.
-
-% XXX STEREO
 
 % We recommend abbrvnat bibliography style.
 
