replaced execution with run (to be consistent)

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -567,7 +567,7 @@ language vs.\ the other languages are presented. Each row is divided in
 five bands, one for each test, in the order {\em IdSub}, {\em
   IntPert}, {\em RandCharSub}, {\em RandTokenSub}, {\em SimSub}. In
 each band, the tests are, in order, {\em compilation},
-{\em execution}, {\em output validity}. Among the results that stand
+{\em run}, {\em output validity}. Among the results that stand
 out:
 \begin{itemize}
 \item The different results in {\em IdSub} between statically compiled
