--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -558,13 +558,14 @@ analysis for all pairs of languages and each fuzz test. We used the
 Fisher exact test, instead of the more common chi square test, since
 there were cases with very low frequencies. 
 
-The results are presented in Tables \ref{tbl:contingency-test-results}. 
+The results are presented in Tables \ref{tbl:contingency-test-results-1} 
+and \ref{tbl:contingency-test-results-1}. 
 Black lozenges appear when a
 particular fuzz test \emph{failed} to show a statistically significant
 difference between two languages (significance was set at the 0.05
 level). In each table, the results of the Fisher exact test for each
 language vs.\ the other languages are presented. Each row is divided in
-five bands, one for each test, in the order {\em IdSub}, {\em
+four bands, one for each test, in the order {\em IdSub}, {\em
   IntPert}, {\em RandCharSub}, {\em RandTokenSub}, {\em SimSub}. In
 each band, the tests are, in order, {\em compilation},
 {\em run}, {\em output validity}. Among the results that stand
@@ -578,7 +579,7 @@ out:
 \item C\# behaves more like C and C++ and less like Java, despite its
   surface similarities to the latter.
 
-\item Haskel behaves more similarly to Java than other languages.
+\item Haskell behaves more similarly to Java than other languages.
 
 \item Although there is cluster of blacks between statically compiled
   languages, we do not see a comparable pattern in dynamic languages.
