corrected table 5,6 captions

--- a/pub/contingency_tables_no_fuzz.tex
+++ b/pub/contingency_tables_no_fuzz.tex
@@ -152,7 +152,7 @@ Python & $\scriptscriptstyle\lozenge\lozenge\lozenge$&$\scriptscriptstyle\blackl
 & \\
 \end{tabular}
 }
-\caption{Contingency test results}
+\caption{Contingency test results for C, C++, C\#, Haskell, Java, PHP, Perl, and Ruby}
 \label{tbl:contingency-test-results-1}
 \end{table*}
 
@@ -196,6 +196,6 @@ Ruby & $\scriptscriptstyle\lozenge\blacklozenge\lozenge$&$\scriptscriptstyle\loz
 & \\
 \end{tabular}
 } 
-\caption{Contingency test results}
+\caption{Contingency test results for Python and Javascript}
 \label{tbl:contingency-test-results-2}
 \end{table*}
