reinstated execution (run)

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -568,7 +568,7 @@ language vs.\ the other languages are presented. Each row is divided in
 four bands, one for each test, in the order {\em IdSub}, {\em
   IntPert}, {\em RandCharSub}, {\em RandTokenSub}, {\em SimSub}. In
 each band, the tests are, in order, {\em compilation},
-{\em run}, {\em output validity}. Among the results that stand
+{\em execution (run)}, {\em output validity}. Among the results that stand
 out:
 \begin{itemize}
 \item The different results in {\em IdSub} between statically compiled
