Add copyright message

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -20,8 +20,9 @@
 \begin{document}
 
 \conferenceinfo{PLATEAU '12}{October 21, Tucson (AZ)} 
-\copyrightyear{2012} 
-\copyrightdata{[to be supplied]}
+\copyrightyear{2012}
+\toappear{Copyright is held by the author/owner(s). This paper was published in the Proceedings of the Workshop on Evaluation and Usability of Programming Languages and Tools (PLATEAU) at the ACM Onward! and SPLASH Conferences. October, 2012. Tucson, Arizona, USA}
+% \copyrightdata{ }
 
 %\titlebanner{banner above paper title} % These are ignored unless
 %\preprintfooter{short description of paper} % 'preprint' option specified.
